--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body
   background-size: cover;
 }
 
+
+
+
+
 #start, #number_of_objects, #start
 {
     font-size: 20px;
@@ -17,6 +21,14 @@ body
     line-height: 3;
     text-align: centre;
 }
+canvas
+{
+    border: 2px solid white;
+    border-radius: 10px;
+    margin-top: 130px;
+    box-shadow: 5x 5px 5px white;
+}
+
 
 #heading_1
 {
